<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="horizontal" 

    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:id="@+id/etBrojVozova" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:ems="10" 
        android:layout_toRightOf="@+id/tvBrojVozova" 
        android:layout_alignBottom="@id/tvBrojVozova" 
        android:inputType="number" />
    <EditText android:id="@+id/etBrojVagona" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:ems="10" 
        android:layout_alignLeft="@id/etBrojVozova" 
        android:layout_alignBottom="@+id/TextView01" 
        android:inputType="number" />
    <EditText android:id="@+id/etBonusPoVagonu" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:ems="10" 
        android:layout_toRightOf="@id/tvBrojVozova" 
        android:layout_alignBottom="@+id/TextView02" 
        android:inputType="number" />
    <TextView android:textAppearance="?android:textAppearanceMedium" 
        android:id="@id/TextView02" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_marginTop="21.0dip" 
        android:text="@string/wagonBonus" 
        android:layout_below="@id/etBrojVagona" 
        android:layout_alignRight="@id/TextView01" 
        android:layout_alignParentLeft="true" />
    <TextView android:textAppearance="?android:textAppearanceMedium" 
        android:id="@+id/TextView03" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_marginTop="24.0dip" 
        android:text="@string/timeForRoute" 
        android:layout_below="@id/etBonusPoVagonu" 
        android:layout_alignRight="@id/TextView02" 
        android:layout_alignParentLeft="true" />
    <EditText android:id="@+id/etVremeZaTuru" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:hint="@string/inSeconds" 
        android:ems="10" 
        android:layout_toRightOf="@id/tvBrojVozova" 
        android:layout_alignBottom="@id/TextView03" 
        android:inputType="number" />
    <TextView android:textAppearance="?android:textAppearanceMedium" 
        android:id="@+id/TextView01" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_marginTop="24.0dip" 
        android:text="@string/nummberOfWagons" 
        android:layout_below="@id/etBrojVozova" 
        android:layout_alignRight="@id/tvBrojVozova" 
        android:layout_alignParentLeft="true" />
    <TextView android:id="@+id/tfPrikazRezultata" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_marginTop="60.0dip" 
        android:ems="10" 
        android:layout_below="@id/TextView03" 
        android:layout_alignParentLeft="true" />
    <Button android:id="@+id/bIzracunaj" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:text="@string/buttonCalculate" 
        android:layout_alignParentBottom="true" 
        android:layout_centerHorizontal="true" />
    <ImageView android:id="@+id/frag1_icon" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_alignParentLeft="true" 
        android:layout_alignParentTop="true" 
        android:contentDescription="Ovde treba da ide slika" />
    <TextView android:textAppearance="?android:textAppearanceMedium" 
        android:id="@id/tvBrojVozova" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:text="@string/nummberOfTrains" 
        android:layout_below="@id/frag1_icon" 
        android:layout_alignParentLeft="true" />
    <TextView android:textAppearance="?android:textAppearanceLarge" 
        android:id="@+id/frag1_text" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_marginLeft="14.0dip" 
        android:layout_toRightOf="@id/frag1_icon" 
        android:layout_alignParentTop="true" />
</RelativeLayout>